testData/annotation.semantic/ConstructorMustNotBeStatic.hx
class Test {
  <error descr="Constructor can't be static">static</error> public function new() {}
}